# EMG_fatigue_detection

./: .gitignore  MANIFEST.in  README.md  data_utils.py  emg_processing_utils.py  main.py  pyproject.toml  requirements.txt  signal_analysis_pipeline.py
.github/workflows/: publish.yml
Data/: config.cfg  filtered_signals.csv
Data/Enrico2/: cometa_54.c3d
data/: filtered_signals.csv  master_df.csv
emg_fd/src/utils/: data_utils.py
models/: fatigue_model_bundle.joblib
pipeline/: inference.py  signal_analysis_pipeline.py  train_model.py
src/emg_fatigue_detection/: cli.py
src/emg_fatigue_detection.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/emg_fatigue_detection/pipeline/: inference.py  signal_analysis_pipeline.py  train_model.py
src/emg_fatigue_detection/utils/: __init__.py  data_utils.py  eval_utils.py
src/pipeline/: inference.py  signal_analysis_pipeline.py  train_model.py
src/utils/: data_utils.py  eval_utils.py
utils/: data_utils.py  emg_processing_utils.py  eval_utils.py  ml_utils.py  print_utils.py
